Changed AuthorizedKeysCommandUser from root to nobody

--- a/etc/ssh/sshd_config.d/support-openldap-ssh-keys.conf
+++ b/etc/ssh/sshd_config.d/support-openldap-ssh-keys.conf
@@ -1,2 +1,2 @@
 AuthorizedKeysCommand /bin/sh /usr/local/sbin/fetch-openldap-ssh-keys.sh %u
-AuthorizedKeysCommandUser root
+AuthorizedKeysCommandUser nobody
